# ComfyUI-TranscriptionTools

./: README.md  __init__.py  pyproject.toml
components/: audio_sink_node.py  load_audio.py  load_batch.py  load_video_audio.py  load_whisper_model.py  model_sink_debug.py  util.py  whisper_transcription.py  whisper_transcription_batch.py
components/convert/: vhs_audio_to_audio.py
docs/: README.md  models.md  nodes.md  workflows.md
web/: TranscriptTools.core.js  VHS.core.js
workflows/: batch_transcribe.json  single_transcribe.json
